--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-<link rel="stylesheet" href="styles.css"></head>
+<link rel="stylesheet" href="taskManagement/styles.css"></head>
 <body class="mat-typography">
   <app-root></app-root>
-<script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
+<script src="taskManagement/runtime-es2015.js" type="module"></script>
+<script src="taskManagement/runtime-es5.js" nomodule defer></script>
+<script src="taskManagement/polyfills-es5.js" nomodule defer></script>
+<script src="taskManagement/polyfills-es2015.js" type="module"></script>
+<script src="taskManagement/vendor-es2015.js" type="module"></script>
+<script src="taskManagement/vendor-es5.js" nomodule defer></script>
+<script src="taskManagement/main-es2015.js" type="module"></script>
+<script src="taskManagement/main-es5.js" nomodule defer></script>
+</body>
 </html>
